--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "friend_finder",
   "version": "0.0.0",
-  "server": false,
-  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "test": "",
     "build": ""
   },
-  "dependencies": {,
+  "dependencies": {
     "body-parser": "1.18.2",
     "express": "^4.17.1"
   },
