--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "friend_finder",
   "version": "0.0.0",
-  "server": false,
-  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "test": "",
     "build": ""
   },
